--- a/index.html
+++ b/index.html
@@ -4,7 +4,50 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css">
 </head>
 <body>
-	<h1>my first site</h1>
-	<p>hello goe are you</p>
+	<div class="contenir">
+		<header>
+			<div class="row">
+		       <div class="logo">
+				  <a href=""><img src="bike1.jpg" width="100px"></a>
+			   </div>
+	           <nav class="navbar">
+				   	<ul class="navbar-nav">
+				   		<li class="nav-item"><a href="">Home</a></li>
+				   		<li class="nav-item"><a href="">About</a></li>
+				   		<li class="nav-item"><a href="">Services</a></li>
+				   		<li class="nav-item"><a href="">Contact</a></li>
+			   	    </ul>
+	            </nav>
+		   </div>
+		</header>
+		<main>
+			<div class="row">
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">1
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">2
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">3
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">4
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">5
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">6
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">7
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">8
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">9
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">10
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">11
+				</div>
+				<div class="col-6 col-sm-4 col-md-2 col-lg-1">12
+				</div>
+
+		</main>
+	</div>
 </body>
 </html>
